<resources>
    <string name="app_name">CLAB</string>
    <string name="hint_id">id</string>
    <string name="hint_nombre"> Nombre </string>
    <string name="hint_precio_publico">precio_publico</string>
    <string name="hint_existencias">existencias</string>
    <string name="btn_guardar">Guardar registro</string>
    <string name="menu_nuevo">Nuevo registro</string>


    <color name="primary">#9E9E9E</color>
    <color name="primary_dark">#616161</color>
    <color name="primary_light">#F5F5F5</color>
    <color name="accent">#FFEB3B</color>
    <color name="primary_text">#212121</color>
    <color name="secondary_text">#757575</color>
    <color name="icons">#212121</color>
    <color name="divider">#BDBDBD</color>
</resources>