<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/viewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_id" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_id"
        android:inputType="number" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@id/viewNombre"
        android:inputType="textCapCharacters"/>

    <TextView
        android:id="@+id/viewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_precio_publico" />

    <EditText
        android:id="@+id/txtPrecioPublico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_precio_publico"
        android:inputType="number" />

    <TextView
        android:id="@+id/viewExistencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_existencias" />

    <EditText
        android:id="@+id/txtExistencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_existencias"
        android:inputType="number" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_guardar"
        android:text="guardar registro"
        android:textSize="24sp" />

</LinearLayout>